# PACMAN

./: CMakeLists.txt  README.md
cfg/: algorithm_params.json  camera_info.json  config_files.json  debug_info.json  dnn_info.json  marker_config.json
docker/: Dockerfile
src/: common.cpp  common.hpp  debuggingInfo.cpp  debuggingInfo.hpp  detectedMarker.cpp  detectedMarker.hpp  main.cpp  paacman.cpp  paacman.hpp  parameters.cpp  parameters.hpp  tensorrt10Manager.cpp  tensorrt10Manager.hpp
